*SVN*

* The has_many create method works with polymorphic associations.  #6361 [Dan Peterson]

* MySQL: introduce Mysql::Result#all_hashes to support further optimization.  #5581 [Stefan Kaes]

* save! shouldn't validate twice.  #6324 [maiha, Bob Silva]

* Association collections have an _ids reader method to match the existing writer for collection_select convenience (e.g. employee.task_ids). The writer method skips blank ids so you can safely do @employee.task_ids = params[:tasks] without checking every time for an empty list or blank values.  #1887, #5780 [Michael Schuerig]

* Add an attribute reader method for ActiveRecord::Base.observers [Rick Olson]

* Deprecation: count class method should be called with an options hash rather than two args for conditions and joins.  #6287 [Bob Silva]

* has_one associations with a nil target may be safely marshaled.  #6279 [norbauer, Jeremy Kemper]

* Duplicate the hash provided to AR::Base#to_xml to prevent unexpected side effects [Koz]

* Add a :namespace option to  AR::Base#to_xml [Koz]

* Deprecation tests. Remove warnings for dynamic finders and for the foo_count method if it's also an attribute. [Jeremy Kemper]

* Mock Time.now for more accurate Touch mixin tests.  #6213 [Dan Peterson]

* Improve yaml fixtures error reporting.  #6205 [Bruce Williams]

* Rename AR::Base#quote so people can use that name in their models. #3628 [Koz]

* Add deprecation warning for inferred foreign key. #6029 [Josh Susser]

* Fixed the Ruby/MySQL adapter we ship with Active Record to work with the new authentication handshake that was introduced in MySQL 4.1, along with the other protocol changes made at that time #5723 [jimw@mysql.com]

* Deprecation: use :dependent => :delete_all rather than :exclusively_dependent => true.  #6024 [Josh Susser]

* Document validates_presences_of behavior with booleans: you probably want validates_inclusion_of :attr, :in => [true, false].  #2253 [Bob Silva]
